gh-3117 Refactor UserName
Also fix proxy repodir validation